tests/netgen/errors/false_plain_output/errors.netgen
Error: Could not build output file 'output/plain.nod.xml' (No such file or directory).
Quitting (on error).
